<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleEditCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_title_new_member"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
                <EditText
                    android:id="@+id/inputCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:hint="@string/user_name" />

                <EditText
                    android:id="@+id/inputCustomerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/user_email" />

                <EditText
                    android:id="@+id/inputCustomerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:hint="@string/business_address" />

                <EditText
                    android:id="@+id/inputCustomerContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/business_phone" />
        </LinearLayout>


        <Button
            android:id="@+id/btnAddNewCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryLight"
            android:text="@string/btn_add_new_member" />

</LinearLayout>