<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.ezpz.pos.activity.BillActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay"
        android:id="@+id/view">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarBill"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_no"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_trn_date"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_cashier"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_customer"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtBillNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_no"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_trn_date"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtCashierName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_cashier"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_customer"
                android:textColor="@android:color/black"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <ListView
            android:id="@+id/listViewBillItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_total_bill"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_disc"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_tax"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtTotalBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_total_bill"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtTotalDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_disc"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtTotalTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_tax"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_net_bill"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_cash"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_change"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtNetBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_net_bill"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtTotalCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_cash"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/txtChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bill_change"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
